tests/cmp/parseerror-val-after-in.trp
let
  val x = 1
  val y = 2
in  val z = 3
end
